--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="github">
+    <img src="imagens/tela github1.jpg" alt="github">
     <a href="https://github.com/JeanlucasBarragan" target="_blank">ACESSE</a>
 </body>
 </html>
